data/derived/sp14/progs/unify/prog4180.ml.out
Characters 193-194:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a list * 'b list -> 'c -> 'd list
       but an expression was expected of type
         'a list * 'b list -> 'c -> 'a list * 'b list
       Type 'd list is not compatible with type 'a list * 'b list 
